feat(keyboard): 添加 QWERTY 字母和符号键盘
用户现在可以在 ASR 键盘中切换到 QWERTY 字母键盘和数字符号键盘。

QWERTY 键盘功能包括：
- 字母输入，支持单次和锁定大小写切换
- 退格键长按重复删除
- 空格键（长按可返回 ASR 键盘）
- 回车键
- 切换至数字符号键盘

数字符号键盘功能包括：
- 数字和常用符号输入
- 退格键长按重复删除
- 空格键（长按可返回 ASR 键盘）
- 回车键
- 切换回字母键盘

ASR 键盘新增了切换按钮，方便在语音输入和字母键盘之间快速切换。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,6 +15,17 @@
     <string name="cd_punct_btn_2">Custom key 2</string>
     <string name="cd_punct_btn_3">Custom key 3</string>
     <string name="cd_punct_btn_4">Custom key 4</string>
+    <string name="cd_letters_keyboard">Switch to letters keyboard</string>
+    <string name="cd_space">Space</string>
+    <string name="label_abc">ABC</string>
+    <string name="label_space">Space</string>
+    <string name="cd_shift">Shift</string>
+    <string name="cd_symbols_keyboard">Switch to symbols</string>
+    <string name="label_123">123</string>
+    <string name="cd_switch_to_voice">Back to voice input</string>
+    <string name="hint_text_buffer">Text buffer</string>
+    <string name="cd_pinyin_mode">Chinese Pinyin input mode</string>
+    <string name="label_pinyin">中</string>
 
     <string name="status_idle">Ready</string>
     <string name="status_listening">Listening…</string>
