--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,6 +15,17 @@
     <string name="cd_punct_btn_2">自定义按键 2</string>
     <string name="cd_punct_btn_3">自定义按键 3</string>
     <string name="cd_punct_btn_4">自定义按键 4</string>
+    <string name="cd_letters_keyboard">切换字母键盘</string>
+    <string name="cd_space">空格</string>
+    <string name="label_abc">ABC</string>
+    <string name="label_space">空格</string>
+    <string name="cd_shift">切换大小写</string>
+    <string name="cd_symbols_keyboard">切换数字符号</string>
+    <string name="label_123">123</string>
+    <string name="cd_switch_to_voice">返回语音输入</string>
+    <string name="hint_text_buffer">文本暂存区</string>
+    <string name="cd_pinyin_mode">中文拼音输入模式</string>
+    <string name="label_pinyin">中</string>
 
     <string name="status_idle">就绪</string>
     <string name="status_listening">正在聆听…</string>
