feat(ime): 添加 QWERTY 键盘语言切换
替换了 QWERTY 键盘上的回车键为语言切换按钮。
引入了 `LangMode` 枚举来管理中英文输入模式。
在中文模式下，字母键始终显示大写；在英文模式下，字母键根据 Shift 状态显示大小写。
添加了相应的字符串资源。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -26,6 +26,9 @@
     <string name="hint_text_buffer">Text buffer</string>
     <string name="cd_pinyin_mode">Chinese Pinyin input mode</string>
     <string name="label_pinyin">中</string>
+    <string name="cd_lang_switch">Language switch</string>
+    <string name="label_chinese_mode">文</string>
+    <string name="label_english_mode">A</string>
 
     <string name="status_idle">Ready</string>
     <string name="status_listening">Listening…</string>
