feat(ime): 添加 QWERTY 键盘拼音转中文输入
在 QWERTY 键盘的中文模式下，引入了拼音缓冲区和 LLM 驱动的拼音转汉字功能。

- 字母键和空格键现在将输入添加到拼音缓冲区。
- 退格键在中文模式下优先删除拼音缓冲区内容。
- “中文”按钮触发 LLM 将拼音缓冲区内容转换为汉字并提交。
- `LlmPostProcessor` 新增 `pinyinToChinese` 方法，用于调用 LLM 进行拼音转汉字。
- 添加了相关的状态和提示字符串，以支持新的输入流程。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -34,12 +34,14 @@
     <string name="status_listening">Listening…</string>
     <string name="status_recognizing">Recognizing…</string>
     <string name="status_ai_processing">AI post-processing…</string>
+    <string name="status_pinyin_processing">Converting pinyin…</string>
     <string name="status_ai_edit_listening">Speak your edit instruction…</string>
     <string name="status_ai_editing">AI editing…</string>
     <string name="status_reverted_to_raw">Reverted to raw transcript</string>
     <string name="status_llm_empty_result">AI edit failed: no result</string>
     <string name="status_last_asr_not_found">Last ASR result not found; canceled</string>
     <string name="hint_need_llm_keys">Configure AI post-processing first</string>
+    <string name="hint_pinyin_empty">Type pinyin first</string>
     <string name="hint_cannot_read_text">Current app text is not readable</string>
     <string name="hint_need_permission">Microphone permission is required for voice input</string>
 
