feat(ime): 增强退格键手势；添加 QWERTY 默认语言设置
退格键现在支持多种手势，包括轻触删除、向上/向左滑动清空所有文本和拼音缓冲区、向下滑动撤销或恢复上次的后处理结果，以及长按重复删除。
新增了 QWERTY 键盘的默认语言设置，允许用户选择英文或中文作为键盘的初始语言模式，可在设置界面配置。
同时更新了应用版本号。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -73,6 +73,9 @@
     <string name="label_show_ime_switcher">Show "Switch Input Method" button</string>
     <string name="label_mic_haptic">Haptic feedback on mic press</string>
     <string name="label_qwerty_haptic">Haptic on key taps</string>
+    <string name="label_qwerty_default_lang">Default 26-key language</string>
+    <string name="qwerty_lang_english">English</string>
+    <string name="qwerty_lang_chinese">Chinese</string>
     <string name="label_floating_switcher">Enable floating ball to switch IME</string>
     <string name="label_floating_alpha">Floating ball transparency</string>
     <string name="toast_need_overlay_perm">Please grant "Display over other apps" in system settings to enable the floating ball</string>
