--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -107,6 +107,11 @@
     <string name="toast_import_success">导入成功，已应用</string>
     <string name="toast_import_failed">导入失败或格式不正确</string>
 
+    <!-- Pinyin mode -->
+    <string name="label_pinyin_mode">拼音输入模式</string>
+    <string name="pinyin_mode_quanpin">全拼</string>
+    <string name="pinyin_mode_xiaohe">小鹤双拼</string>
+
     <!-- Stats -->
     <string name="label_asr_total_chars">历史语音识别总字数：%1$d</string>
 
