--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -133,5 +133,5 @@
 \n 6. Switch input method
 \n 7. Edit key: tap to speak a command, then tap again when done; the LLM will modify the last transcribed/selected content according to the command
 \n 8. Enter key
-\n 9. The four areas below are customizable punctuation keys</string>
+\n 9. The three areas below are customizable punctuation keys</string>
 </resources>
