feat(ime): 添加拼音自动 LLM 转换预览功能
引入了拼音自动 LLM 转换功能，允许用户在输入拼音时，键盘服务周期性地将拼音发送给 LLM 进行转换，并将结果作为合成文本进行预览。
新增了设置项 `拼音自动转汉字间隔`，用户可以配置 LLM 自动转换的频率（秒），0 表示关闭此功能。
优化了中文“中”键的逻辑，使其在自动转换开启时，能够智能判断是否需要再次调用 LLM 进行最终转换，或直接上屏当前预览。
同时，重构了键盘面板上部分按钮的 ID 和点击事件处理，以提高代码一致性。

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -111,6 +111,7 @@
     <string name="label_pinyin_mode">拼音输入模式</string>
     <string name="pinyin_mode_quanpin">全拼</string>
     <string name="pinyin_mode_xiaohe">小鹤双拼</string>
+    <string name="label_pinyin_llm_interval">拼音自动转汉字间隔（秒，0 为关闭）</string>
 
     <!-- Stats -->
     <string name="label_asr_total_chars">历史语音识别总字数：%1$d</string>
