--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -34,12 +34,14 @@
     <string name="status_listening">正在聆听…</string>
     <string name="status_recognizing">识别中…</string>
     <string name="status_ai_processing">AI后处理中…</string>
+    <string name="status_pinyin_processing">拼音转汉字中…</string>
     <string name="status_ai_edit_listening">请说出编辑指令…</string>
     <string name="status_ai_editing">AI编辑中…</string>
     <string name="status_reverted_to_raw">已切换为原始识别结果</string>
     <string name="status_llm_empty_result">AI编辑失败：未返回结果</string>
     <string name="status_last_asr_not_found">未找到上一次识别文本，已取消替换</string>
     <string name="hint_need_llm_keys">需要配置 AI 后处理参数</string>
+    <string name="hint_pinyin_empty">请先输入拼音</string>
     <string name="hint_cannot_read_text">当前应用的文本不可读取</string>
     <string name="hint_need_permission">需要麦克风权限以进行语音输入</string>
 
@@ -70,6 +72,9 @@
     <string name="label_show_ime_switcher">显示“切换输入法”按钮</string>
     <string name="label_mic_haptic">按下麦克风时振动反馈</string>
     <string name="label_qwerty_haptic">键盘按键振动</string>
+    <string name="label_qwerty_default_lang">26键默认语言模式</string>
+    <string name="qwerty_lang_english">英文</string>
+    <string name="qwerty_lang_chinese">中文</string>
     <string name="label_floating_switcher">启用悬浮球快速切换输入法</string>
     <string name="label_floating_alpha">悬浮球透明度</string>
     <string name="toast_need_overlay_perm">请在系统设置中授予"在其他应用上层显示"权限以启用悬浮球</string>
