feat(ime): 扩展自定义标点按钮并重构键盘布局
增加了两个自定义标点按钮，总数达到5个，以提供更灵活的输入选项。
重构了 `keyboard_view.xml` 布局，从 `FrameLayout` 切换到 `ConstraintLayout`，优化了按键的排列和视觉效果。
将功能按钮（设置、输入法切换、AI编辑、回车、提示词、后处理、隐藏、退格）重新组织为三行，位于麦克风按钮上方。
为状态文本添加了新的背景样式 (`bg_status_text.xml`)。
统一了键盘面板的高度 (`ime_panel_height`)，确保不同键盘视图之间的高度一致性。
更新了 `Prefs` 和 `SettingsActivity` 以支持新的标点按钮，并增加了新的字符串资源以支持国际化。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,6 +14,8 @@
     <string name="cd_punct_btn_1">Custom key 1</string>
     <string name="cd_punct_btn_2">Custom key 2</string>
     <string name="cd_punct_btn_3">Custom key 3</string>
+    <string name="cd_punct_btn_4">Custom key 4</string>
+    <string name="cd_punct_btn_5">Custom key 5</string>
     <string name="cd_letters_keyboard">Switch to letters keyboard</string>
     <string name="cd_space">Space</string>
     <string name="label_abc">ABC</string>
@@ -101,6 +103,8 @@
     <string name="label_custom_punct_1">Button 1 (char or punctuation)</string>
     <string name="label_custom_punct_2">Button 2 (char or punctuation)</string>
     <string name="label_custom_punct_3">Button 3 (char or punctuation)</string>
+    <string name="label_custom_punct_4">Button 4 (char or punctuation)</string>
+    <string name="label_custom_punct_5">Button 5 (char or punctuation)</string>
     <string name="label_auto_switch_password">Auto switch back on password fields</string>
 
     <!-- Language & misc -->
