--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -113,6 +113,7 @@
     <string name="lang_follow_system">Follow System</string>
     <string name="lang_zh_cn">Simplified Chinese</string>
     <string name="lang_en">English</string>
+    <string name="label_startup_qwerty_switch">Show 26-key keyboard at startup</string>
     <string name="toast_saved">Saved</string>
     <string name="toast_preset_added">Preset added</string>
     <string name="untitled_preset">Untitled preset</string>
