feat(ime): 为 QWERTY 键盘添加上滑输入数字/符号功能
实现了 QWERTY 键盘字母键和逗号键的上滑手势，允许用户快速输入数字和常用符号。
此功能旨在提升输入效率，减少切换到符号面板的次数。

具体改动包括：
- 新增 `CornerBadgeDrawable` 用于在按键右上角显示上滑提示。
- 在 `AsrKeyboardService` 中处理按键的 `onTouchListener`，检测上滑手势并提交对应的替代字符。
- 根据当前语言模式 (`LangMode.Chinese` 或 `LangMode.English`) 提供不同的上滑字符映射。
- 在 `Prefs` 中添加 `qwertySwipeAltEnabled` 配置项，并在 `SettingsActivity` 中提供开关。
- 新增 `ids.xml` 中的标签用于手势处理。
- 添加了多语言字符串资源。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -74,6 +74,7 @@
     <string name="label_trim_trailing_punct">Remove trailing punctuation on finish</string>
     <string name="label_mic_haptic">Haptic feedback on mic press</string>
     <string name="label_qwerty_haptic">Haptic on key taps</string>
+    <string name="label_qwerty_swipe_alt">Enable swipe-up digits/symbols</string>
     <string name="label_qwerty_default_lang">Default 26-key language</string>
     <string name="qwerty_lang_english">English</string>
     <string name="qwerty_lang_chinese">Chinese</string>
