feat(llm): 添加自定义词汇支持以优化拼音转中文
引入自定义词汇功能，允许用户在设置中输入常用词汇。这些词汇将通过新的 PinyinUtil 转换为拼音，并动态注入到 LLM 后处理的系统提示中，以辅助 LLM 在拼音转中文时进行消歧和更准确的还原。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -160,4 +160,7 @@
 \n 7. Edit key: tap to speak a command, then tap again when done; the LLM will modify the last transcribed/selected content according to the command
 \n 8. Enter key
 \n 9. The three areas below are customizable punctuation keys</string>
+    <!-- Custom vocabulary for pinyin assistance -->
+    <string name="label_custom_vocab_title">Custom Vocabulary (Pinyin assist)</string>
+    <string name="label_custom_vocab_hint">One term per line; they will be converted to pinyin and injected into the transcription prompt. Example:\n北京大学\nOpenAI\n科大讯飞</string>
 </resources>
