feat(floating): 添加键盘可见性兼容模式
解决部分设备上悬浮球“仅在键盘显示时显示”功能检测不准确的问题。
通过引入多种推断方式（如可编辑焦点、输入法包名、WindowInsets 和全局布局变化），并允许悬浮层向无障碍服务上报 IME 可见性信号，显著提升了该功能的兼容性和准确性。
此模式可能略微增加耗电。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -121,6 +121,8 @@
     <string name="label_mic_tap_toggle">Use tap to control recording</string>
     <string name="label_floating_switcher">Enable floating ball to switch IME</string>
     <string name="label_floating_only_when_ime_visible">Only show floating ball when keyboard is visible</string>
+    <string name="label_floating_ime_visibility_compat">IME visibility compatibility mode</string>
+    <string name="desc_floating_ime_visibility_compat">Enable when default detection is inaccurate; adds multiple heuristics (editable focus/IME package) and may slightly increase battery usage.</string>
     <string name="label_floating_alpha">Floating ball transparency</string>
     <string name="label_floating_size">Floating ball size</string>
     <string name="toast_need_overlay_perm">Please grant "Display over other apps" in system settings to enable the floating ball</string>
