--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -121,6 +121,8 @@
     <string name="label_floating_alpha">悬浮球透明度</string>
     <string name="label_floating_size">悬浮球大小</string>
     <string name="label_floating_only_when_ime_visible">仅在键盘显示时显示悬浮球</string>
+    <string name="label_floating_ime_visibility_compat">键盘可见性兼容模式</string>
+    <string name="desc_floating_ime_visibility_compat">默认检测不准确时开启此选项：将启用多种推断（可编辑焦点/输入法包名等），提升兼容性，但可能略增耗电。</string>
     <string name="toast_need_overlay_perm">请在系统设置中授予"在其他应用上层显示"权限以启用悬浮球</string>
     <string name="cd_floating_switcher">快速切换到 言犀键盘</string>
     <string name="label_floating_asr">使用悬浮球进行语音识别</string>
