--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,8 @@
     <string name="label_mic_tap_toggle">语音键盘使用点按控制</string>
     <string name="label_floating_switcher">启用悬浮球快速切换输入法</string>
     <string name="label_floating_only_when_ime_visible">仅在键盘显示时显示悬浮球</string>
+    <string name="label_floating_ime_visibility_compat">键盘可见性兼容模式</string>
+    <string name="desc_floating_ime_visibility_compat">当默认检测不准确时启用，增加多种推断方式（可编辑焦点/输入法包名等），可能略微增加耗电。</string>
     <string name="label_floating_alpha">悬浮球透明度</string>
     <string name="label_floating_size">悬浮球大小</string>
     <string name="toast_need_overlay_perm">请在系统设置中授予“在其他应用上层显示”权限以启用悬浮球</string>
