refactor(floating): 简化键盘可见性兼容模式检测逻辑
移除了之前用于键盘可见性兼容模式的 WindowInsets、GlobalLayoutListener 和可编辑焦点等多种复杂检测启发式。
现在，兼容模式仅使用输入法包名检测作为回退机制，旨在降低代码复杂性并减少潜在的系统资源消耗。
同时更新了设置界面中兼容模式的描述文本以及相关的调试提示字符串，以反映这一变化。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -122,7 +122,7 @@
     <string name="label_floating_switcher">Enable floating ball to switch IME</string>
     <string name="label_floating_only_when_ime_visible">Only show floating ball when keyboard is visible</string>
     <string name="label_floating_ime_visibility_compat">IME visibility compatibility mode</string>
-    <string name="desc_floating_ime_visibility_compat">Enable when default detection is inaccurate; adds multiple heuristics (editable focus/IME package) and may slightly increase battery usage.</string>
+    <string name="desc_floating_ime_visibility_compat">Enable when default detection is inaccurate; use only IME package detection as compatibility fallback.</string>
     <string name="label_floating_ime_visibility_debug">Show IME visibility debug toasts</string>
     <string name="desc_floating_ime_visibility_debug">On visibility state changes, show which heuristics fired via Toast. For testing only.</string>
     <string name="label_floating_alpha">Floating ball transparency</string>
@@ -139,10 +139,7 @@
 
     <!-- IME visibility debug toasts -->
     <string name="toast_ime_debug_window">Detect: IME window present</string>
-    <string name="toast_ime_debug_focus">Detect: Editable focus</string>
     <string name="toast_ime_debug_package">Detect: IME package</string>
-    <string name="toast_ime_debug_insets">Detect: WindowInsets(IME)</string>
-    <string name="toast_ime_debug_layout">Detect: Visible frame gap</string>
     <string name="toast_ime_debug_hold">Detect: Focus hold window</string>
     <string name="btn_grant_all_permissions">Grant all required permissions</string>
 
