--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -122,9 +122,11 @@
     <string name="label_floating_switcher">Enable floating ball to switch IME</string>
     <string name="label_floating_only_when_ime_visible">Only show floating ball when keyboard is visible</string>
     <string name="label_floating_ime_visibility_compat">IME visibility compatibility mode</string>
-    <string name="desc_floating_ime_visibility_compat">Enable when default detection is inaccurate; use only IME package detection as compatibility fallback.</string>
-    <string name="label_floating_ime_visibility_debug">Show IME visibility debug toasts</string>
-    <string name="desc_floating_ime_visibility_debug">On visibility state changes, show which heuristics fired via Toast. For testing only.</string>
+    <string name="desc_floating_ime_visibility_compat">Applies only to the packages below: in these apps, use IME package detection as the compatibility fallback. Includes com.tencent.mm by default.</string>
+    <string name="label_ime_visibility_compat_pkgs">Target packages (one per line)</string>
+    <string name="hint_ime_visibility_compat_pkgs">Enter full package names (exact match, e.g., com.tencent.mm). com.tencent.mm is included by default.</string>
+    
+    
     <string name="label_floating_alpha">Floating ball transparency</string>
     <string name="label_floating_size">Floating ball size</string>
     <string name="toast_need_overlay_perm">Please grant "Display over other apps" in system settings to enable the floating ball</string>
@@ -137,10 +139,7 @@
     <string name="hint_floating_write_compat_pkgs">Enter full package or prefix (e.g., org.telegram or com.ss.android.ugc.aweme). A trailing * means prefix match (e.g., org.telegram.*).</string>
     <string name="cd_floating_asr">Floating ball voice recognition</string>
 
-    <!-- IME visibility debug toasts -->
-    <string name="toast_ime_debug_window">Detect: IME window present</string>
-    <string name="toast_ime_debug_package">Detect: IME package</string>
-    <string name="toast_ime_debug_hold">Detect: Focus hold window</string>
+    
     <string name="btn_grant_all_permissions">Grant all required permissions</string>
 
     <!-- Floating ASR status messages -->
