--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -122,17 +122,13 @@
     <string name="label_floating_size">悬浮球大小</string>
     <string name="label_floating_only_when_ime_visible">仅在键盘显示时显示悬浮球</string>
     <string name="label_floating_ime_visibility_compat">键盘可见性兼容模式</string>
-    <string name="desc_floating_ime_visibility_compat">默认检测不准确时开启此选项：使用“输入法包名”检测作为兼容回退。</string>
-    <string name="label_floating_ime_visibility_debug">显示键盘可见性调试提示</string>
-    <string name="desc_floating_ime_visibility_debug">在键盘可见性状态改变时，以 Toast 显示命中的检测策略，仅用于测试与排查。</string>
+    <string name="desc_floating_ime_visibility_compat">仅对下方指定的应用生效：在这些应用内，使用“输入法包名”检测作为兼容回退。默认包含 com.tencent.mm。</string>
+    <string name="label_ime_visibility_compat_pkgs">兼容目标包名（每行一个）</string>
+    <string name="hint_ime_visibility_compat_pkgs">请填写完整包名，采用精准匹配（例如 com.tencent.mm）。默认包含 com.tencent.mm。</string>
     <string name="toast_need_overlay_perm">请在系统设置中授予"在其他应用上层显示"权限以启用悬浮球</string>
     <string name="cd_floating_switcher">快速切换到 言犀键盘</string>
     <string name="label_floating_asr">使用悬浮球进行语音识别</string>
 
-    <!-- IME visibility debug toasts -->
-    <string name="toast_ime_debug_window">检测：IME窗口存在</string>
-    <string name="toast_ime_debug_package">检测：IME包名</string>
-    <string name="toast_ime_debug_hold">检测：焦点保持窗口</string>
     <string name="label_floating_write_compat">悬浮球写入文字兼容性模式</string>
     <string name="desc_floating_write_compat">在部分应用中文本框会出现背景文字被误识别，导致通过无障碍服务插入文字时会附带背景文字的情况。开启此模式后，在目标软件中使用悬浮球时会尝试“全选+粘贴”写入一个不可见字符，以屏蔽背景文字。</string>
     <string name="label_floating_write_compat_pkgs">兼容目标包名（每行一个）</string>
